# fleet_adapter_template_tb4_ws

./: .gitignore  HYBRID_FLEET_ADAPTER_ARCHITECTURE.md  TB4_FLEET_ADAPTER_COMMANDS.md  TB4_FLEET_ADAPTER_TROUBLESHOOTING.md  TB4_SIMPLE_MAP.md
config/zenoh/: robot2_host_zenoh_bridge_ros2dds_client_config.json5
scripts/: analyze_reference_coordinates.py  plot_tb4_map_navgraph.py  publish_nav_graph_markers.py  record_reference_pose.py  remeasure_dock_points.sh  run_direct_adapter.sh  run_direct_dispatch_go_to_place.sh  run_direct_schedule.sh  run_tb4_rebuild_20260521_checks.sh  sync_robot_map_to_rmf.py  update_reference_from_amcl.py
src/tb4_fleet_adapter/: CMakeLists.txt  config.yaml  config.yaml.bak_20260518_1730  config_hybrid_tcp.yaml  config_simple.yaml  package.xml  setup.py
src/tb4_fleet_adapter/scripts/: fleet_adapter  host_robot_topic_relay  host_robot_topic_tcp_receiver  host_robot_topic_tcp_sender  zenoh_topics_to_ros
src/tb4_fleet_adapter/tb4_fleet_adapter/: RobotClientAPI.py  RobotCommandHandle.py  fleet_adapter.py  host_robot_topic_relay.py  host_robot_topic_tcp_bridge.py  nudged_compat.py  zenoh_topics_to_ros.py
